--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,377 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+:root{
+  --color-131921 :#131921;
+  --color-3b4149 :#3b4149;
+  --color-febd69 :#febd69;
+  --color-232f3e :#232f3e;
+  --color-bf4800 :#bf4800;
+  --color-f5f5f7 :#f5f5f7;
+  --color-1c1c1b :#1c1c1b;
+}
+body{
+  font-family: 'poppins', sans-serif;
+}
+a{
+  text-decoration:none ;
+  display: inline-block;
+}
+.form-control{
+  box-shadow: none;
+  border-color: inherit;
+}
+.gap-10{
+gap:10px;
+}
+.gap-15{
+  gap:15px;
+}
+.gap-30 {
+  gap: 30px;
+}
+.button {
+  background-color: var(--color-232f3e);
+  color: white;
+  padding: 13px 33px;
+  font-size: 14px;
+  border-radius: 25px;
+}
+.button:hover {
+  background-color: var(--color-febd69);
+  color: var(--color-131921);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+/* Header part start */
+.headre-top-strip{
+  border-bottom: 1px solid var(--color-3b4149);
+  background-color: var(--color-131921);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+.header-upper{
+  background-color: var(--color-131921);
+}
+.header-upper .input-group-text{
+  background-color: var(--color-febd69);
+
+}
+.header-upper.hedder-upper-links img{
+  width: 35px;
+  height: 35px;
+}
+.headre-bottom{
+  background-color: var(--color-232f3e);
+}
+.headre-bottom .menu-links a,
+ .headre-bottom .dropdown button{
+  color: white;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  letter-spacing: .3;
+  text-transform: uppercase;
+}
+ .headre-bottom .dropdown button:focus{
+  box-shadow: none;
+ }
+ .headre-bottom .dropdown-menu{
+  background-color: var(--color-131921);
+  width: 100%;
+  transform: translate3d(0px,57px,0px) !important;
+ }
+ .headre-bottom .dropdown-item{
+  padding: 20px;
+margin-bottom: 3px;
+border-bottom: 1px solid var(--color-3b4149);
+
+ }
+  .headre-bottom .dropdown-item:hover{
+    background-color: transparent;
+    color: var(--color-febd69) !important;
+ }
+/* Headre part end */
+
+/* fotter part start */
+footer{
+  background-color: var(--color-232f3e);
+}
+footer:not(:first-child){
+  border-top: 1px solid var(--color-3b4149);
+}
+footer .input-group-text{
+  background-color: var(--color-232f3e);
+  color: white;
+  padding: 8px,17px;
+}
+/* fotter part end */
+
+
+/* home page start */
+
+.main-bannet-content{
+  top: 15%;
+  left: 5%;
+}
+.main-bannet-content h4{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+.main-bannet-content h5{
+     font-size: 45px;
+      font-weight: 500;
+      line-height: 64px;
+      letter-spacing: -2px;
+      text-transform: none;
+}
+.main-bannet-content p{
+  font-size:18px ;
+  line-height: 28px;
+  letter-spacing:0.4 ;
+  color: var(--color-131921);
 }
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+/* small banne */
+
+.small-bannet-content {
+  top: 25%;
+  left: 10%;
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+.small-bannet-content h4 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+.small-bannet-content h5 {
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 34px;
+  letter-spacing: -2px;
+  text-transform: none;
 }
+
+.small-bannet-content p {
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.4;
+  color: var(--color-131921);
+}
+
+.small-banne{
+  width: 49%;
+}
+
+
+/* home wrapper 02 */
+.home-wrapper-2{
+  background-color:var(--color-f5f5f7);
+}
+/* home wrapper 02 end */
+
+/* categores section */
+.categories{
+  background-color: white ;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
+}
+.categories > div{
+  width: 25%;
+  padding: 10px 10px 10px 20px;
+}
+.categories >div:nth-child(1),
+.categories >div:nth-child(2),
+.categories >div:nth-child(3),
+.categories >div:nth-child(4){
+  border-bottom: 1px solid var(--color-3b4149);
+}
+
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3) {
+  border-right: 1px solid var(--color-3b4149);
+}
+
+.categories>div:nth-child(5),
+.categories>div:nth-child(6),
+.categories>div:nth-child(7) {
+  border-right: 1px solid var(--color-3b4149);
+}
+/* categories section end */
+/* marquee section */
+
+.card-wrapper{
+  background-color: white;
+    box-shadow: 0 0 10px #0000001a;
+    padding: 15px;
+}
+
+/* marquee section end */
+/* home page end */
+
+/* Blog part */
+
+.section-headding{
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 500px;
+  margin-bottom: 30px;
+}
+.blog-card{
+  background-color: white;
+  border-radius: 10px;
+}
+
+.blog-card img{
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+.blog-content{
+  padding: 15px;
+}
+
+.blog-content p.date{
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-family: 400;
+  color: #777777;
+  padding: 0;
+}
+
+.blog-content h5 {
+  font-size: 18px;
+  color: var(--color-131921);
+}
+.blog-content p.decs{
+  font-size: 13px;
+  color: #777777;
+  line-height: 22px;
+}
+/* blog part end */
+
+
+/* product card */
+
+.product-card{
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.product-card .product-image{
+  height: 270px;
+}
+
+.product-card .product-image img{
+  object-fit: contain;
+}
+.product-card .product-image > img:last-child{
+  display: none;
+}
+
+.product-card:hover .product-image > img:first-child{
+  display: none;
+}
+
+.product-card:hover .product-image > img:last-child {
+  display: block;
+}
+
+.product-card:hover .action-bar{
+  right: 15px;
+}
+
+.product-card .product-details h6{
+  color: var(--color-bf4800);
+  font-size: 13px;
+}
+
+.product-card .product-details h5 {
+  color: var(--color-1c1c1b);
+  font-size: 15px;
+}
+
+.product-card .product-details p.price {
+ font-size: 16px;
+ color: var(--color-1c1c1b)
+
+}
+.action-bar{
+  top: 10%;
+  right: -23px;
+  transition: 0.3s;
+}
+
+.wishlist-icon{
+  top: 2%;
+  right: 15px;
+}
+/* product card end */
+
+
+
+/* special-product-card */
+
+.special-product-card{
+  padding: 20px 10px;
+  border-radius: 10px;
+  background-color: white;
+}
+
+.special-product-card .product-image {
+  height: 270px;
+}
+
+/* special-product-card ends */
+
+/* famous-card */
+.famous-card .famous-content{
+  top: 10%;
+  left: 10%;
+}
+
+.famous-content h5{
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400px;
+  color: white;
+  margin-bottom: 7px;
+}
+
+
+.famous-content h6{
+  font-size: 28px;
+  line-height: 38px;
+  font-weight: 500px;
+  color: white;
+}
+
+
+.famous-content p{
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 100px;
+  color: white;
+}
+
+.famous-card img{
+  border-radius: 10px;
+}
+/* famous-card ends */
