--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 
 }
+
 :root{
   --color-131921 :#131921;
   --color-3b4149 :#3b4149;
@@ -13,26 +14,33 @@
   --color-f5f5f7 :#f5f5f7;
   --color-1c1c1b :#1c1c1b;
 }
+
 body{
   font-family: 'poppins', sans-serif;
 }
+
 a{
   text-decoration:none ;
   display: inline-block;
 }
+
 .form-control{
   box-shadow: none;
   border-color: inherit;
 }
+
 .gap-10{
 gap:10px;
 }
+
 .gap-15{
   gap:15px;
 }
+
 .gap-30 {
   gap: 30px;
 }
+
 .button {
   background-color: var(--color-232f3e);
   color: white;
@@ -40,6 +48,7 @@ gap:10px;
   font-size: 14px;
   border-radius: 25px;
 }
+
 .button:hover {
   background-color: var(--color-febd69);
   color: var(--color-131921);
@@ -47,6 +56,8 @@ gap:10px;
 
 
 /* Header part start */
+
+
 .headre-top-strip{
   border-bottom: 1px solid var(--color-3b4149);
   background-color: var(--color-131921);
@@ -55,17 +66,21 @@ gap:10px;
 .header-upper{
   background-color: var(--color-131921);
 }
+
 .header-upper .input-group-text{
   background-color: var(--color-febd69);
+
 
 }
 .header-upper.hedder-upper-links img{
   width: 35px;
   height: 35px;
 }
+
 .headre-bottom{
   background-color: var(--color-232f3e);
 }
+
 .headre-bottom .menu-links a,
  .headre-bottom .dropdown button{
   color: white;
@@ -75,14 +90,17 @@ gap:10px;
   letter-spacing: .3;
   text-transform: uppercase;
 }
+
  .headre-bottom .dropdown button:focus{
   box-shadow: none;
  }
+
  .headre-bottom .dropdown-menu{
   background-color: var(--color-131921);
   width: 100%;
   transform: translate3d(0px,57px,0px) !important;
  }
+
  .headre-bottom .dropdown-item{
   padding: 20px;
 margin-bottom: 3px;
@@ -99,14 +117,17 @@ border-bottom: 1px solid var(--color-3b4149);
 footer{
   background-color: var(--color-232f3e);
 }
+
 footer:not(:first-child){
   border-top: 1px solid var(--color-3b4149);
 }
+
 footer .input-group-text{
   background-color: var(--color-232f3e);
   color: white;
   padding: 8px,17px;
 }
+
 /* fotter part end */
 
 
@@ -116,6 +137,7 @@ footer .input-group-text{
   top: 15%;
   left: 5%;
 }
+
 .main-bannet-content h4{
   font-size: 16px;
   font-weight: 400;
@@ -125,6 +147,7 @@ footer .input-group-text{
   letter-spacing: 0.3px;
   text-transform: uppercase;
 }
+
 .main-bannet-content h5{
      font-size: 45px;
       font-weight: 500;
@@ -132,6 +155,7 @@ footer .input-group-text{
       letter-spacing: -2px;
       text-transform: none;
 }
+
 .main-bannet-content p{
   font-size:18px ;
   line-height: 28px;
@@ -273,6 +297,7 @@ footer .input-group-text{
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
+  width: 100%;
 }
 
 .product-card .product-image{
@@ -306,6 +331,11 @@ footer .input-group-text{
 .product-card .product-details h5 {
   color: var(--color-1c1c1b);
   font-size: 15px;
+}
+
+.product-card p.discription{
+font-size: 13px;
+color: #777777;
 }
 
 .product-card .product-details p.price {
@@ -375,3 +405,122 @@ footer .input-group-text{
   border-radius: 10px;
 }
 /* famous-card ends */
+
+
+/* our store */
+.filter-card {
+  background-color: white;
+  border-radius: 10px;
+  padding: 15px 15px;
+}
+
+.filter-title {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  color: #1c1c1b;
+  margin-bottom: 20px;
+}
+
+.filter-card ul , 
+.filter-card .form-check-lable{
+  list-style-type: none;
+  font-size: 13px;
+  line-height: 30px;
+  color: #777777;
+  cursor: pointer;
+}
+
+.sub-title{
+  font-size: 14px;
+  font-weight: 600;
+  color: #1c1c1b;
+  margin-bottom: 15px;
+  margin-top: 25px;
+}
+
+.filter-card .form-check-input:checked{
+  background-color: var(--color-febd69);
+}
+
+.filter-card .form-check-input:focus {
+  box-shadow: none;
+  border-color: inherit;
+}
+
+.colors{
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.colors li{
+  width: 20px;
+  height: 20px;
+  background-color: var(--color-bf4800);
+  border-radius: 50%;
+}
+
+.random-product h5{
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+.random-product:first-child{
+  border-bottom: 1px solid var(--color-3b4149);
+}
+
+.filter-sort-grid{
+  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.grid img{
+  width: 30px;
+  height:30px;
+  background-color: #f2f2f2;
+  padding: 5px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.gr-12 {
+  width: 100%;
+}
+
+.gr-6 {
+  width: 49%;
+}
+
+.gr-4 {
+  width: 32%;
+}
+.gr-3 {
+  width: 24%;
+}
+
+.gr-12 .product-card{
+  display: flex;
+  gap: 20px;
+}
+
+.gr-6 .product-image{
+  width: 100%;
+}
+
+.gr-6 .product-image img{
+  margin: auto;
+  display: block;
+}
+.gr-12 .product-card .product-image{
+  width: 270px;
+}
+.gr-12 .product-card .product-image{
+  height: auto;
+}
+.gr-12 .action-bar{
+  top: 13%;
+}
+/* our store ends */
