--- a/src/App.css
+++ b/src/App.css
@@ -287,6 +287,26 @@ footer .input-group-text{
   color: #777777;
   line-height: 22px;
 }
+
+.single-blog-card h3{
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--color-1c1c1b);
+}
+
+.single-blog-card p{
+  color: #777777;
+  font-size: 14px;
+}
+
+.single-blog-card a{
+  font-size: 18px;
+  color: #777777;
+  margin-bottom: 20px;
+}
+
+
+
 /* blog part end */
 
 
@@ -568,7 +588,7 @@ color: #777777;
   border-radius: 10px;
 }
 
-.compare-product-card .cross{
+.compare-product-card .cross,.wishlist-card .cross{
   top: 15px;
   right: 15px;
   width: 25px;
@@ -576,14 +596,14 @@ color: #777777;
   cursor: pointer;
 }
 
-.compare-product-details h5.titel{
+.compare-product-details h5.titel, .wishlist-card h5.titel{
   font-size: 15px;
   line-height: 22px;
   font-weight: 500;
   color: var(--color-1c1c1b);
 }
 
-.compare-product-details h6.price{
+.compare-product-details h6.price, .wishlist-card h6.price{
   font-size: 15px;
   line-height: 22px;
   font-weight: 400;
@@ -597,3 +617,60 @@ color: #777777;
   border-top: 1px solid var(--color-f5f5f7);
 }
 /* compare product end */
+
+/* auth card */
+.auth-card{
+  padding: 20px;
+  background-color: white;
+  width: 500px;
+  margin:  30px auto;
+  border-radius: 10px;
+}
+
+.auth-card h3{
+  font-size: 19px;
+  font-weight: 500;
+  color: #777777;
+}
+
+.auth-card .form-control{
+  height: 50px;
+  background-color: #f5f5f7;
+  color: #3b4149;
+  font-size: 14px;
+  border-radius: 10px;
+  border-color: transparent;
+}
+
+.auth-card a{
+  font-size: 14px;
+  font-weight: 400;
+  color: #1c1c1b;
+}
+
+.auth-card .singup{
+  background-color: #febd69;
+  color: #131921;
+}
+
+.auth-card .singup:hover {
+  background-color: #131921;
+  color: #febd69;
+}
+
+
+.auth-card p{
+  font-size: 13px;
+  color: #777777;
+}
+
+/* auth card end*/
+
+/* TermAndCondition */
+.policy{
+   background-color: white;
+   padding: 30px;
+}
+
+
+/* TermAndCondition ends */
