--- a/src/App.css
+++ b/src/App.css
@@ -644,16 +644,19 @@ color: #777777;
 
 .auth-card a{
   font-size: 14px;
+  border: none;
   font-weight: 400;
   color: #1c1c1b;
 }
 
-.auth-card .singup{
+ .singup{
   background-color: #febd69;
   color: #131921;
+  border: none;
 }
 
-.auth-card .singup:hover {
+ .singup:hover {
+  border: none;
   background-color: #131921;
   color: #febd69;
 }
@@ -674,3 +677,138 @@ color: #777777;
 
 
 /* TermAndCondition ends */
+
+/* main product page */
+
+.disscription-wrapper h4{
+  font-size: 26px;
+  color: #1c1c1b;
+}
+
+.disscription-wrapper p {
+  font-size: 14px;
+  color: #777777;
+}
+
+.review-inner-wrapper{
+  background-color: white;
+  padding: 30px;
+
+}
+.reviwe-head {
+  border-bottom: 1px solid rgba(0, 0, 0, 1) ;
+}
+
+
+.reviwe-head h4{
+font-size: 18px;color: #1c1c1b;
+}
+
+.reviwe-head p{
+  font-size: 14px;
+  color: #777777;
+}
+
+.reviwe-form h3{
+  font-size: 25px;
+  color: #777777;
+
+}
+
+.reviwe-form{
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  margin-bottom: 30px;
+}
+
+.reviwe:not(:last-child){
+  border-bottom: 1px solid rgba(0, 0, 0, 1)
+}
+.reviwes p{
+  font-size: 14px;
+  color: #777777;
+}
+
+.main-product-image{
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.main-product-image>div{
+  border: 1px solid rgba(0, 0, 0, 25);
+}
+
+.main-product-image img {
+  width: 100% !important;
+  height: 500px !important;
+  -o-object-fit: cover;
+}
+
+.other-product-images{
+  background-color: white;
+    padding: 20px;
+}
+
+.other-product-images > div{
+    border: 1px solid #f2f2f2;
+    padding: 20px;
+    width: 48%;
+}
+
+.main-product-image .js-image-zoom__zoomed-image{
+  left: 150px !important;
+  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.main-product-details{
+  padding: 20px;
+  border-radius: 10px;
+  background-color: white;
+}
+
+.boder-bottom{
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.main-product-details h3.title{
+  font-size: 18px;
+   font-weight: 600;
+   color: var(--color-1c1c1b);
+   margin-bottom: 10px;
+}
+
+.main-product-details p.price{
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.main-product-details a.review-btn{
+  font-size: 20px;
+  color: #3b4149;
+  text-decoration: underline;
+}
+
+.product-headder{
+  font-size: 14px;
+  color: #1c1c1b;
+  margin-bottom: 0px;
+}
+
+.product-data{
+  font-size: 13px;
+  color: #777777;
+  margin-bottom: 0px;
+}
+
+.main-product-details a {
+  font-size: 14px;
+  color: #777777;
+}
+/* main product page ends */
+
+
+
