--- a/src/App.css
+++ b/src/App.css
@@ -810,5 +810,39 @@ font-size: 18px;color: #1c1c1b;
 }
 /* main product page ends */
 
+/* cart page */
+.cart-header, .cart-data{
+  border-bottom: 1px solid #eaeaea;
+}
+.cart-header h4{
+  font-size: 30px;
+  color: #777777;
+}
 
+.cart-col-1 {
+ width: 40%;
+}
+
+.cart-col-2 {
+  width: 10%;
+}
+
+.cart-col-3 {
+  width: 15%;
+}
+
+.cart-col-4 {
+  width: 15%;
+}
+
+.cart-col-1 p{
+  color: #777777;
+  font-size: 14px;
+}
+
+.cart-data h5.price{
+  font-size: 14px;
+  color: #1c1c1b;
+}
+/* cart pagee nd */
 
